remove autodeployt database on push to main

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,14 +8,14 @@ on:
       - main
 
 jobs: 
-  deploy_db:
-    name: Deploy chatter.io database
-    runs-on: ubuntu-latest
+  # deploy_db:
+  #   name: Deploy chatter.io database
+  #   runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v2
-    - uses: superfly/flyctl-actions/setup-flyctl@master
-    - run: flyctl deploy --config ./fly_db.toml --dockerfile ./Dockerfile_db --remote-only 
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - uses: superfly/flyctl-actions/setup-flyctl@master
+  #   - run: flyctl deploy --config ./fly_db.toml --dockerfile ./Dockerfile_db --remote-only 
   deploy_app:
     name: Deploy chatter.io backend
     runs-on: ubuntu-latest
